Closed Bug 1279889 Opened 8 years ago Closed 8 years ago

Some rv.SuppressException() missing in StructuredCloneHolder

Categories

(Core :: DOM: Core & HTML, defect)

49 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file)

Attached patch rv.patchSplinter Review
      No description provided.
Attachment #8762505 - Flags: review?(bugs)
Comment on attachment 8762505 [details] [diff] [review]
rv.patch

Would it make sense to have some stack object to call SuppressException?
Attachment #8762505 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8bc3f9d3cad9
Some rv.SuppressException() missing in StructuredCloneHolder, r=smaug
https://hg.mozilla.org/mozilla-central/rev/8bc3f9d3cad9
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: