Bug 1279889 - Some rv.SuppressException() missing in StructuredCloneHolder, r=smaug